Overhaul giter8 template. Updated documentation